# battle_tanks

./: .gitignore  README.md  TODO.txt
src/: CMakeLists.txt
src/FileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  FileSystemWin32.cpp
src/Platform/: CMakeLists.txt
src/engine/: AppState.h  AppStateListener.h  CMakeLists.txt  EditorContext.cpp  EditorContext.h  Engine.cpp  Engine.h  GameStateBase.h  GameStatesController.cpp  ThreadPool.h
src/engine/ECS/: ComponentContainer.h  ComponentIterator.h  ComponentView.h  ECS.h  EntityIterator.h  EntitySystem.h  EntityView.h  EventSubscriber.h  ecsTest.h
src/engine/audio/: OalBuffer.cpp  OalSound.cpp  OalSound.hpp  SoundEngine.cpp  SoundEngine.hpp
src/engine/base/: IInput.h
src/engine/common/: NonCopyable.h  Types.h
src/engine/math/: Rect.h  Utils.h  Vector2.h
src/engine/rendering/: Color.h  ColoredVertex.h  DrawingContext.cpp  DrawingContext.h  FanVertex.h  Line.h  Point.h  RenderOpenGL.cpp  RenderOpenGL.h  RenderOpenGLv2.cpp  RenderOpenGLv2.h  RenderPartsOpenGL.cpp  RenderPartsOpenGL.h  SoilImage.h  TGAImage.h  TextureManager.cpp  TextureManager.h
src/tankmain/: CMakeLists.txt  Main.cpp
src/tanks/: CMakeLists.txt  Main.cpp
src/tanks/Application/: AppController.cpp  AppController.h  AppWindow.h  AppWindowBase.h  BattleTanks.cpp  BattleTanks.h  View.cpp  View.h
src/tanks/Engine/: AppState.cpp  AppStateListener.cpp  EditorContext.cpp  EditorContext.h  Engine.cpp  Engine.h  GameContextBase.h  GameLoop.h  GameStateBase.cpp  GameStateBase.h  GameStatesController.cpp  GameStatesController.h  LuaDeleter.cpp  Singleton.h  TestState.cpp  TestState.h  ThreadPool.cpp  ThreadPool.h
src/tanks/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystemWin32.h
src/tanks/GLFW/: GlfwAppWindow.cpp  GlfwAppWindow.h  GlfwClipboard.cpp  GlfwClipboard.h  GlfwInput.cpp  GlfwInput.h  GlfwKeys.cpp  GlfwKeys.gen  GlfwKeys.h  GlfwPlatform.cpp  GlfwPlatform.h  GlfwWindow.cpp  GlfwWindow.h
src/tanks/GUI/: WidgetBase.cpp  WidgetBase.h
src/tanks/Game/: C2DMatrix.h  EditorState.cpp  EntityFunctionTemplates.h  EntityManager.cpp  EntityManager.h  GameController.cpp  GameController.h  GameEntityBase.cpp  GameEntityBase.h  GraveMarkers.cpp  GraveMarkers.h  InvertedAABBox2D.h  LayoutManager.cpp  LayoutManager.h  LoadDataState.h  LuaHelperFunctions.h  MainMenuState.cpp  MainMenuState.h  MessageDispatcher.cpp  MessageDispatcher.h  MovingEntity.h  PauseState.h  Raven_Bot.cpp  Raven_Bot.h  Raven_Door.cpp  Raven_Door.h  Raven_Game.cpp  Raven_Game.h  Raven_Map.cpp  Raven_Map.h  Raven_Scriptor.cpp  Raven_Scriptor.h  Raven_SensoryMemory.cpp  Raven_SensoryMemory.h  Raven_SteeringBehaviors.cpp  Raven_SteeringBehaviors.h  Raven_TargetingSystem.h  Raven_WeaponSystem.cpp  Raven_WeaponSystem.h  Region.h  (+3 more)
src/tanks/Math/: Rect.h  Vector2.h  Vector2D.h  utils.h
src/tanks/Pathfinding/: AStarHeuristicPolicies.h  GraphAlgorithms.h  GraphEdgeTypes.h  GraphNodeTypes.h  HandyGraphFunctions.h  NodeTypeEnumerations.h  Pathfinder.cpp  Pathfinder.h  SparseGraph.h
src/tanks/Platform/: Conf.h  Config.h  Platform.h  Types.h
src/tanks/Render/: DrawingContext.cpp  DrawingContext.h  ObjectView.h  ObjectViewsSelector.cpp  RenderBase.h  RenderGLES2.cpp  RenderOpenGL.cpp  RenderScheme.cpp  TGAImage.cpp  TGAImage.h  Terrain.cpp  Terrain.h  TextureManager.cpp  TextureManager.h  WorldView.cpp  WorldView.h  rAnimatedSprite.cpp  rAnimatedSprite.h  rBooster.cpp  rBooster.h  rBrickFragment.cpp  rBrickFragment.h  rDecoration.cpp  rDecoration.h  rFireSpark.cpp  rFireSpark.h  rIndicator.cpp  rIndicator.h  rLight.cpp  rLight.h  rMinigun.cpp  rMinigun.h  rParticle.cpp  rParticle.h  rPredicate.h  rShock.cpp  rShock.h  rSprite.cpp  rSprite.h  rText.cpp  (+15 more)
src/tanks/Shell/: BotView.cpp  BotView.h  Campaign.cpp  Campaign.h  CampaignControls.cpp  CampaignControls.h  ConfigBinding.cpp  ConfigBinding.h  ConfigConsoleHistory.cpp  ConfigConsoleHistory.h  Configuration.cpp  Configuration.h  Controller.cpp  Controller.h  DefaultCamera.cpp  DefaultCamera.h  Desktop.cpp  Desktop.h  DesktopFactory.cpp  DesktopFactory.h  Editor.cpp  Editor.h  EditorDlg.cpp  EditorDlg.h  EditorLayout.cpp  EditorLayout.h  Game.cpp  Game.h  GameClassVis.cpp  GameClassVis.h  GetFileName.cpp  GetFileName.h  InputManager.cpp  InputManager.h  KeyMapper.cpp  Macros.h  MainMenu.cpp  MainMenu.h  MapCache.cpp  MapCache.h  (+37 more)
src/tanks/UI/: Button.cpp  Button.h  Combo.cpp  Combo.h  Console.cpp  Console.h  ConsoleBuffer.cpp  ConsoleBuffer.h  DataSource.cpp  DataSource.h  DataSourceAdapters.h  Dialog.cpp  Dialog.h  Edit.cpp  Edit.h  GuiManager.cpp  GuiManager.h  InputContext.cpp  InputContext.h  Keys.h  LayoutContext.cpp  LayoutContext.h  List.cpp  List.h  ListBase.cpp  ListBox.cpp  ListBox.h  ListSelectionBinding.cpp  MultiColumnListItem.cpp  MultiColumnListItem.h  Rating.cpp  Rating.h  Rectangle.cpp  Rectangle.h  RenderOrder.h  Scroll.cpp  Scroll.h  ScrollView.cpp  ScrollView.h  StackLayout.cpp  (+10 more)
src/tanks/ai/: DrivingAgent.cpp  DrivingAgent.h  ShootingAgent.cpp  ShootingAgent.h  ai.cpp  ai.h
src/tanks/app/: CombinedConfig.cpp  CombinedConfig.h  View.cpp  View.h  tzod.cpp  tzod.h
src/tanks/as/: AppConfig.cpp  AppConfig.h  AppController.cpp  AppController.h  AppState.cpp
src/tanks/config/: BaseConfiguration.cpp  BaseConfiguration.h  ConfigBase.cpp  ConfigBase.h  ConfigCache.cpp  ConfigCache.h  JsonConfig.cpp  JsonConfig.h  JsonConfigBase.cpp  JsonConfigBase.h  VariableArray.cpp  VariableArray.h  VariableBase.cpp  VariableBase.h  VariableBool.cpp  VariableBool.h  VariableNil.cpp  VariableNil.h  VariableNumber.cpp  VariableNumber.h  VariableString.cpp  VariableString.h  VariableTable.cpp  VariableTable.h  WrappedJsonValue.cpp  WrappedJsonValue.h
src/tanks/ctx/: AIManager.cpp  AIManager.h  Deathmatch.cpp  Deathmatch.h  EditorContext.cpp  EditorContext.h  GameContext.cpp  GameContext.h  GameEvents.cpp  ScriptMessageBroadcaster.cpp  ScriptMessageBroadcaster.h  WorldController.cpp  WorldController.h
src/tanks/gc/: Actor.cpp  Actor.h  Crate.cpp  Crate.h  Explosion.cpp  Explosion.h  Field.cpp  Field.h  GameClasses.cpp  Grid.h  (+46 more)
(+154 files in other folders)
